--- a/src/Common/colors.scss
+++ b/src/Common/colors.scss
@@ -1,4 +1,5 @@
-$primary-color:rgb(20, 19, 19);
-$secondary-color:rgba(117, 212, 212, 0.582);
-$font-primary:white;
-$font-secondary:rgba(255, 0, 0, 0.459);
+
+$primary-color: #0f171e;
+$secondary-color: #1a242f;
+$font-primary: #ffffff;
+$font-secondary: #79b8f3;
